--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ nav{
     padding: 60px 80px;
 }
 
+nav i{
+    display: inline-block;
+    rotate: 45deg;
+}
+
 .part2{
     display: flex;
     align-items: center;
@@ -45,4 +50,28 @@ nav button{
     padding: 22px 40px;
     border-radius: 10px;
     border: 2px solid #000;
+}
+
+
+
+.center{
+    padding: 80px;
+    height: 85%;
+    width: 100%;
+    background-color: bisque;
+    display: flex;
+    justify-content: center;
+}
+
+.certer-part1{
+    height: 100%;
+    width: 40%;
+}
+.certer-part2{
+    height: 100%;
+    width: 60%;
+}
+
+.certer-part1 h1{
+    font-size: 100px;
 }
