--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ html, body{
 }
 
 section{
-    height: 100%;
     width: 100%;
     position: relative;
     overflow-x: hidden;
@@ -62,14 +61,12 @@ nav button{
 
 .center{
     padding: 80px;
-    height: 75%;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .certer-part1{
-    height: 100%;
     width: 45%;
 }
 
@@ -97,7 +94,6 @@ nav button{
 }
 
 .certer-part2{
-    height: 100%;
     width: 55%;
     display: flex;
     justify-content: center;
@@ -114,3 +110,28 @@ nav button{
     padding: 10px 80px;
 }
 
+
+.section2{
+    padding: 80px;
+}
+.title{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 50px;
+
+}
+
+
+.title h2{
+    background-color: #a7ff78;
+    font-weight: 500;
+    padding: 10px 15px;
+    border-radius: 10px;
+    font-size: 42px;
+    margin-right: 30px;
+}
+
+.title p{
+    font-size: 24px;
+}
