--- a/style.css
+++ b/style.css
@@ -111,15 +111,12 @@ nav button{
 }
 
 
-.section2{
+
+.section2 .title{
     padding: 80px;
-}
-.title{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding-bottom: 50px;
-
 }
 
 
@@ -134,4 +131,23 @@ nav button{
 
 .title p{
     font-size: 24px;
+}
+
+.container{
+    padding: 10px 80px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding-bottom: 80px;
+}
+
+.elem{
+    flex-shrink: 0;
+    height: 400px;
+    width: 45%;
+    border-radius: 3px solid black;
+    border-radius: 20px;
+    background-color: #a7ff78;
+    box-shadow: 0px 15px 0 black;
 }
