--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
 html, body{
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+}
+#id{
+    height: 20px;
+    width: 20px;
+    background-color: #a7ff78;
 }
 
 section{
@@ -108,9 +114,12 @@ nav button{
     align-items: center;
     justify-content: space-between;
     padding: 10px 80px;
+    margin-bottom: 50px;
 }
 
-
+.section2{
+    height: 2000px;
+}
 
 .section2 .title{
     padding: 80px;
@@ -139,7 +148,7 @@ nav button{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 50px;
     padding-bottom: 80px;
 }
 
@@ -162,6 +171,13 @@ nav button{
     flex-direction: column;
 }
 
+.elem-part1 i{
+    background-color: #000;
+    color: white;
+    padding: 8px;
+    border-radius: 50px;
+}
+
 .elem-part2 img{
     height: 300px;
     padding: 50px;
@@ -178,4 +194,23 @@ nav button{
 .elem-part1 h4{
     font-size: 20px;
     font-family: japan;
+}
+
+.black{
+    background-color: #111;
+    
+}
+
+.black h4{
+    color: white;
+}
+.black h2{
+    background-color: white;
+}
+
+.black i{
+    background-color: white;
+    color: #000;
+    padding: 8px;
+    border-radius: 50px;
 }
