--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ html, body{
     width: 100%;
     overflow-x: hidden;
 }
-#id{
-    height: 20px;
-    width: 20px;
+#course{
+    height: 30px;
+    width: 30px;
     background-color: #a7ff78;
+    border-radius: 50%;
+    position: fixed;
+
 }
 
 section{
